--- a/client/my-sites/site-settings/jetpack-module-toggle/style.scss
+++ b/client/my-sites/site-settings/jetpack-module-toggle/style.scss
@@ -1,7 +1,3 @@
-.jetpack-module-toggle .form-toggle__label *:not( .form-toggle__switch ) {
+.jetpack-module-toggle .form-toggle__label .form-toggle__label-content {
 	margin-left: 8px;
-}
-
-.jetpack-module-toggle p.form-setting-explanation.is-indented {
-	margin-left: 32px;
 }
