--- a/client/post-editor/media-modal/detail/_style.scss
+++ b/client/post-editor/media-modal/detail/_style.scss
@@ -49,9 +49,12 @@
 
 .editor-media-modal-detail__preview-wrapper .spinner,
 .editor-media-modal-detail__preview {
+	display: flex;
+	align-items: center;
 	position: absolute;
 		top: 50%;
 		left: 50%;
+	height: 100%;
 	max-height: 100%;
 	max-width: 100%;
 	transform: translate( -50%, -50% );
