--- a/client/post-editor/media-modal/detail/_style.scss
+++ b/client/post-editor/media-modal/detail/_style.scss
@@ -55,6 +55,7 @@
 		top: 50%;
 		left: 50%;
 	height: 100%;
+	width: 100%;
 	max-height: 100%;
 	max-width: 100%;
 	transform: translate( -50%, -50% );
